--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-bootstrap": "^1.0.1",
     "bootstrap": "^5.3.7",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.541.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-bootstrap": "^2.10.10",
