--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/jwt-decode": "^2.2.1",
     "@types/react-bootstrap": "^1.0.1",
     "bootstrap": "^5.3.7",
+    "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.541.0",
     "next": "15.4.6",
