--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-bootstrap-icons": "^1.11.6",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
