--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/jwt-decode": "^2.2.1",
     "@types/react-bootstrap": "^1.0.1",
     "bootstrap": "^5.3.7",
+    "chart.js": "^4.5.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.541.0",
@@ -21,6 +23,7 @@
     "react": "19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
